2 possible solutions to exercise 1

--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -52,6 +52,27 @@
     "reliability = functools.partial(robustness, LARGER, 0.99)\n",
     "utility = functools.partial(robustness, LARGER, 0.75)\n",
     "\n",
+    "MAXIMIZE = ScalarOutcome.MAXIMIZE\n",
+    "MINIMIZE = ScalarOutcome.MINIMIZE\n",
+    "# choose one, not sure which. \n",
+    "robustnes_functions = [ScalarOutcome('90th percentile max_p', kind=MINIMIZE,\n",
+    "                             variable_name='max_P', function=maxp),\n",
+    "                       ScalarOutcome('10th percentile reliability', kind=MAXIMIZE,\n",
+    "                             variable_name='reliability', function=reliability),\n",
+    "                       ScalarOutcome('10th percentile inertia', kind=MAXIMIZE,\n",
+    "                             variable_name='inertia', function=inertia),\n",
+    "                       ScalarOutcome('10th percentile utility', kind=MAXIMIZE,\n",
+    "                             variable_name='utility', function=utility)]\n",
+    "\n",
+    "robustnes_maxp_function = [ScalarOutcome('90th percentile max_p', kind=MINIMIZE,\n",
+    "                             variable_name='max_P', function=maxp)]\n",
+    "robustnes_reliability_function = [ScalarOutcome('10th percentile reliability', kind=MAXIMIZE,\n",
+    "                             variable_name='reliability', function=reliability)]\n",
+    "robustnes_inertia_function = [ScalarOutcome('10th percentile inertia', kind=MAXIMIZE,\n",
+    "                             variable_name='inertia', function=inertia)]\n",
+    "robustnes_utility_function = [ScalarOutcome('10th percentile utility', kind=MAXIMIZE,\n",
+    "                             variable_name='utility', function=utility)]\n",
+    "\n",
     "\n"
    ]
   },
