--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -27,12 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from ema_workbench import (RealParameter, ScalarOutcome, Constant,\n",
+    "                           Model)\n",
     "import functools\n",
     "\n",
     "def robustness(direction, threshold, data):\n",
@@ -54,7 +56,7 @@
     "\n",
     "MAXIMIZE = ScalarOutcome.MAXIMIZE\n",
     "MINIMIZE = ScalarOutcome.MINIMIZE\n",
-    "# choose one, not sure which. \n",
+    "# choose one, not sure which.  \n",
     "robustnes_functions = [ScalarOutcome('90th percentile max_p', kind=MINIMIZE,\n",
     "                             variable_name='max_P', function=maxp),\n",
     "                       ScalarOutcome('10th percentile reliability', kind=MAXIMIZE,\n",
@@ -85,12 +87,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] performing 500 scenarios * 4 policies * 1 model(s) = 2000 experiments\n[MainProcess/INFO] 200 cases completed\n[MainProcess/INFO] 400 cases completed\n[MainProcess/INFO] 600 cases completed\n[MainProcess/INFO] 800 cases completed\n[MainProcess/INFO] 1000 cases completed\n[MainProcess/INFO] 1200 cases completed\n[MainProcess/INFO] 1400 cases completed\n[MainProcess/INFO] 1600 cases completed\n[MainProcess/INFO] 1800 cases completed\n[MainProcess/INFO] 2000 cases completed\n[MainProcess/INFO] experiments finished\n[MainProcess/INFO] terminating pool\n"
+    }
+   ],
+   "source": [
+    "from ema_workbench import (MultiprocessingEvaluator, ema_logging,\n",
+    "                           perform_experiments)\n",
+    "from ema_workbench.em_framework.evaluators import MC\n",
+    "from dps_lake_model import lake_model as lakeModel\n",
+    "lake_model = Model('lakeproblem', function=lakeModel)\n",
+    "# instantiate model\n",
+    "lake_model.uncertainties = [RealParameter('b', 0.1, 0.45),\n",
+    "                                RealParameter('q', 2.0, 4.5),\n",
+    "                                RealParameter('mean', 0.01, 0.05),\n",
+    "                                RealParameter('stdev', 0.001, 0.005),\n",
+    "                                RealParameter('delta', 0.93, 0.99)]\n",
+    "\n",
+    "# set levers\n",
+    "lake_model.levers = [RealParameter(\"c1\", -2, 2),\n",
+    "                         RealParameter(\"c2\", -2, 2),\n",
+    "                         RealParameter(\"r1\", 0, 2),\n",
+    "                         RealParameter(\"r2\", 0, 2),\n",
+    "                         RealParameter(\"w1\", 0, 1)\n",
+    "                         ]\n",
+    "\n",
+    "# specify outcomes\n",
+    "lake_model.outcomes = [ScalarOutcome('max_P'),\n",
+    "                           ScalarOutcome('utility'),\n",
+    "                           ScalarOutcome('inertia'),\n",
+    "                           ScalarOutcome('reliability')]\n",
+    "\n",
+    "# override some of the defaults of the model\n",
+    "lake_model.constants = [Constant('alpha', 0.41),\n",
+    "                            Constant('nsamples', 100),\n",
+    "                            Constant('myears', 100)]\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "\n",
+    "with MultiprocessingEvaluator(lake_model, n_processes=7) as evaluator:\n",
+    "    results = evaluator.perform_experiments(scenarios=500, policies=4, uncertainty_sampling=MC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiments, outcomes = results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
