minor fix on used processes.

--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -129,7 +129,7 @@
     "                            Constant('myears', 100)]\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
-    "with MultiprocessingEvaluator(lake_model, n_processes=7) as evaluator:\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
     "    results = evaluator.perform_experiments(scenarios=500, policies=4, uncertainty_sampling=MC)"
    ]
   },
