--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -66,13 +66,13 @@
     "                       ScalarOutcome('10th percentile utility', kind=MAXIMIZE,\n",
     "                             variable_name='utility', function=utility)]\n",
     "\n",
-    "robustnes_maxp_function = [ScalarOutcome('90th percentile max_p', kind=MINIMIZE,\n",
+    "robustnes_maxp_function = [ScalarOutcome('max_p', kind=MINIMIZE,\n",
     "                             variable_name='max_P', function=maxp)]\n",
-    "robustnes_reliability_function = [ScalarOutcome('10th percentile reliability', kind=MAXIMIZE,\n",
+    "robustnes_reliability_function = [ScalarOutcome('reliability', kind=MAXIMIZE,\n",
     "                             variable_name='reliability', function=reliability)]\n",
-    "robustnes_inertia_function = [ScalarOutcome('10th percentile inertia', kind=MAXIMIZE,\n",
+    "robustnes_inertia_function = [ScalarOutcome('inertia', kind=MAXIMIZE,\n",
     "                             variable_name='inertia', function=inertia)]\n",
-    "robustnes_utility_function = [ScalarOutcome('10th percentile utility', kind=MAXIMIZE,\n",
+    "robustnes_utility_function = [ScalarOutcome('utility', kind=MAXIMIZE,\n",
     "                             variable_name='utility', function=utility)]\n",
     "\n",
     "\n"
@@ -135,11 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "b     delta      mean         q     stdev        c1        c2  \\\n0    0.235782  0.946745  0.037606  3.848933  0.001201  1.273938 -0.337456   \n1    0.111899  0.984623  0.034387  3.762675  0.004325  1.273938 -0.337456   \n2    0.298016  0.959069  0.038599  3.970124  0.002031  1.273938 -0.337456   \n3    0.233245  0.933301  0.037443  2.548092  0.003673  1.273938 -0.337456   \n4    0.208404  0.984000  0.037064  4.154736  0.001448  1.273938 -0.337456   \n..        ...       ...       ...       ...       ...       ...       ...   \n495  0.447434  0.973819  0.037656  3.028653  0.002486  1.273938 -0.337456   \n496  0.236288  0.977609  0.043207  3.704230  0.001577  1.273938 -0.337456   \n497  0.166828  0.988848  0.021256  3.436432  0.004271  1.273938 -0.337456   \n498  0.336323  0.952599  0.016970  2.839700  0.002878  1.273938 -0.337456   \n499  0.391520  0.946084  0.048156  3.350823  0.002582  1.273938 -0.337456   \n\n           r1        r2       w1 scenario policy        model  \n0    0.875933  1.921154  0.71227        0      0  lakeproblem  \n1    0.875933  1.921154  0.71227        1      0  lakeproblem  \n2    0.875933  1.921154  0.71227        2      0  lakeproblem  \n3    0.875933  1.921154  0.71227        3      0  lakeproblem  \n4    0.875933  1.921154  0.71227        4      0  lakeproblem  \n..        ...       ...      ...      ...    ...          ...  \n495  0.875933  1.921154  0.71227      495      0  lakeproblem  \n496  0.875933  1.921154  0.71227      496      0  lakeproblem  \n497  0.875933  1.921154  0.71227      497      0  lakeproblem  \n498  0.875933  1.921154  0.71227      498      0  lakeproblem  \n499  0.875933  1.921154  0.71227      499      0  lakeproblem  \n\n[500 rows x 13 columns]\n"
+    }
+   ],
    "source": [
-    "experiments, outcomes = results"
+    "experiments, outcomes = results\n",
+    "maxp_exp = experiments[experiments['policy']==0]\n",
+    "experiments, outcomes = results\n",
+    "utility_exp = experiments[experiments['policy']==1]\n",
+    "experiments, outcomes = results\n",
+    "reliability_exp = experiments[experiments['policy']==2]\n",
+    "experiments, outcomes = results\n",
+    "inertia_exp = experiments[experiments['policy']==3]"
    ]
   },
   {
@@ -150,8 +163,18 @@
    },
    "outputs": [],
    "source": [
+    "from ema_workbench import (MultiprocessingEvaluator, ema_logging,\n",
+    "                           perform_experiments)\n",
+    "from ema_workbench.em_framework.evaluators import MC\n",
+    "from ema_workbench.em_framework.samplers import sample_uncertainties\n",
+    "from dps_lake_model import lake_model as lakeModel\n",
     "\n",
-    "\n"
+    "n_scenarios = 500\n",
+    "scenarios = sample_uncertainties(lake_model, n_scenarios, sampler=MC)\n",
+    "nfe=1000\n",
+    "\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
+    "    results = evaluator.robust_optimize(scenarios=500, policies=4, uncertainty_sampling=MC)\n"
    ]
   },
   {
