made improvement but dont know what to do anymore

--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,15 @@
     "# override some of the defaults of the model\n",
     "lake_model.constants = [Constant('alpha', 0.41),\n",
     "                            Constant('nsamples', 100),\n",
-    "                            Constant('myears', 100)]\n",
+    "                            Constant('myears', 100)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
     "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
@@ -336,10 +344,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n"
+    }
+   ],
+   "source": [
+    "from ema_workbench import (MultiprocessingEvaluator, SequentialEvaluator, ema_logging,\n",
+    "                           perform_experiments)\n",
+    "from ema_workbench.em_framework.evaluators import MC\n",
+    "from ema_workbench.em_framework.samplers import sample_uncertainties\n",
+    "from dps_lake_model import lake_model as lakeModel\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# robustnes_maxp_function \n",
+    "# robustnes_reliability_function \n",
+    "# robustnes_inertia_function \n",
+    "# robustnes_utility_function \n",
+    "# lake_model\n",
+    "\n",
+    "nfe = 200\n",
+    "n_scen = 5\n",
+    "scenario = sample_uncertainties(lake_model, n_scen)\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
+    "    results = evaluator.robust_optimize(robustnes_maxp_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n"
+   ]
   },
   {
    "cell_type": "markdown",
