minor update to ass 10

--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -344,13 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n"
+     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n[MainProcess/INFO] pool started\n[MainProcess/INFO] generation 0: 0/200 nfe\n[MainProcess/INFO] optimization completed, found 1 solutions\n[MainProcess/INFO] terminating pool\n"
     }
    ],
    "source": [
@@ -374,7 +374,19 @@
     "\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
-    "    results = evaluator.robust_optimize(robustnes_maxp_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n"
+    "    maxp_res = evaluator.robust_optimize(robustnes_maxp_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
+    "    reliability_res = evaluator.robust_optimize(robustnes_reliability_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
+    "    utility_res = evaluator.robust_optimize(robustnes_utility_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
+    "    inertia_res = evaluator.robust_optimize(robustnes_inertia_function, scenarios=scenario, nfe=nfe,epsilons=[0.05])\n"
    ]
   },
   {
