added some clarifying text to q2 of ass10

--- a/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 10 - MORO.ipynb
@@ -275,6 +275,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So i think this stuff below was not supposed to be done in q2, although i am not completely sure. \n",
+    "\n",
+    "I also think it does work, but it is super slow to run this for 1000 nfe and 500 scenarios. So i might have been a bit impatient when running this. However in my defense, when you wait for 15 minutes and nothing happens it usually means you are having a deadlock, usually. So let me know what you think should happen here, i actually do not know. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -344,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
