Little more clarification

--- a/final assignment/FirstTry.ipynb
+++ b/final assignment/FirstTry.ipynb
@@ -11,7 +11,11 @@
     "    flood means less water will reach the cities downstream as the water is now in that city. \n",
     "\n",
     "# Goal / Research question\n",
-    "    reduce the cost and reduce the deaths of all living things, trees, animals and humans (who are also animals if you are precise)."
+    "    reduce the cost and reduce the deaths of all living things, trees, animals and humans (who are also animals if you are precise).\n",
+    "\n",
+    "    low end terms, easy to run models. \n",
+    "\n",
+    "    Perspective of any actor or scenario. ==> actor Overijssel.  "
    ]
   }
  ],
