--- a/final assignment/ExploringModel.ipynb
+++ b/final assignment/ExploringModel.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\teres\\Anaconda3\\lib\\site-packages\\ema_workbench\\em_framework\\evaluators.py:22: UserWarning: ipyparallel not installed - IpyparalleEvaluator not available\n",
-      "  'ipyparallel not installed - IpyparalleEvaluator not available')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ema_workbench import ema_logging, MultiprocessingEvaluator\n",
     "from dike_model_function import DikeNetwork\n",
@@ -113,23 +104,19 @@
     "    variable_names.extend(['RfR Total Costs {}'.format(n)])\n",
     "    variable_names.extend(['Expected Evacuation Costs {}'.format(n)])\n",
     "\n",
-    "dike_model.outcomes = [ScalarOutcome('All Costs'),\n",
-    "\n",
-    "                        ScalarOutcome('Expected Number of Deaths')]"
+    "dike_model.outcomes = [ScalarOutcome('A.1_Expected Annual Damage 0'),\n",
+    "                            ScalarOutcome('A.1_Expected Number of Deaths 0')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "[MainProcess/INFO] pool started\n",
-      "[MainProcess/INFO] performing 200 scenarios * 4 policies * 1 model(s) = 800 experiments\n"
-     ]
+     "name": "stderr",
+     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] performing 10 scenarios * 4 policies * 1 model(s) = 40 experiments\n[MainProcess/INFO] 4 cases completed\n[MainProcess/INFO] 8 cases completed\n[MainProcess/INFO] 12 cases completed\n[MainProcess/INFO] 16 cases completed\n[MainProcess/INFO] 20 cases completed\n[MainProcess/INFO] 24 cases completed\n[MainProcess/INFO] 28 cases completed\n[MainProcess/INFO] 32 cases completed\n[MainProcess/INFO] 36 cases completed\n[MainProcess/INFO] 40 cases completed\n[MainProcess/INFO] experiments finished\n[MainProcess/INFO] terminating pool\n"
     }
    ],
    "source": [
@@ -138,17 +125,18 @@
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results = evaluator.perform_experiments(scenarios=200,               #500\n",
+    "    results = evaluator.perform_experiments(scenarios=10,               #500\n",
     "                                            policies=4,\n",
-    "                                            uncertainty_sampling='mc',\n",
-    "                                            reporting_frequency=1)"
+    "                                            uncertainty_sampling='mc')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### @ Martajin, for unknown reasons, I'm not able to run the cell above(maybe it just runs super slow). I thus created another notebook and I used the way in the example (\"ProblemFormulation.ipynb) to import model and perform experiments. It runs faster than this one! "
+    "##### @ Martajin, for unknown reasons, I'm not able to run the cell above(maybe it just runs super slow). I thus created another notebook and I used the way in the example (\"ProblemFormulation.ipynb) to import model and perform experiments. It runs faster than this one! \n",
+    "\n",
+    "@Hongxuan, i f*'ed up. Sorry. Forgot to push my working results. But as you can see the problem was in the outcome. No real outcomes used in the model were defined. It was just a test run, with 10 scenarios to test if this works. This should also work for you. ALthough it still is slow. "
    ]
   },
   {
@@ -211,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
