4000 experiments were done and saved

--- a/final assignment/PerformingExperiments.ipynb
+++ b/final assignment/PerformingExperiments.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\teres\\Anaconda3\\lib\\site-packages\\ema_workbench\\em_framework\\evaluators.py:22: UserWarning: ipyparallel not installed - IpyparalleEvaluator not available\n",
+      "  'ipyparallel not installed - IpyparalleEvaluator not available')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<Logger EMA (DEBUG)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +169,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Experiments 1 : 500 scenarios and 50 policies\n"
+    "#### Experiments 1 : 500 scenarios and 50 policies\n",
+    "(It's rather time-consuming and I lowered it to 4000 experiments. Need to ask Erika tmr about how many experiments should be enough.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,22 +183,45 @@
      "output_type": "stream",
      "text": [
       "[MainProcess/INFO] pool started\n",
-      "[MainProcess/INFO] performing 500 scenarios * 50 policies * 1 model(s) = 25000 experiments\n",
-      "[MainProcess/INFO] 2500 cases completed\n"
+      "[MainProcess/INFO] performing 200 scenarios * 20 policies * 1 model(s) = 4000 experiments\n",
+      "[MainProcess/INFO] 400 cases completed\n",
+      "[MainProcess/INFO] 800 cases completed\n",
+      "[MainProcess/INFO] 1200 cases completed\n",
+      "[MainProcess/INFO] 1600 cases completed\n",
+      "[MainProcess/INFO] 2000 cases completed\n",
+      "[MainProcess/INFO] 2400 cases completed\n",
+      "[MainProcess/INFO] 2800 cases completed\n",
+      "[MainProcess/INFO] 3200 cases completed\n",
+      "[MainProcess/INFO] 3600 cases completed\n",
+      "[MainProcess/INFO] 4000 cases completed\n",
+      "[MainProcess/INFO] experiments finished\n",
+      "[MainProcess/INFO] terminating pool\n"
      ]
     }
    ],
    "source": [
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results_1 = evaluator.perform_experiments(scenarios = 500, policies = 50)"
+    "    results_1 = evaluator.perform_experiments(scenarios = 200, policies = 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] results saved successfully to C:\\Users\\teres\\Documents\\EPA1361-Model-based Decison Making\\EPA1361\\final assignment\\200Scenario_20Policy.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ema_workbench import save_results\n",
+    "\n",
+    "save_results(results_1, './200Scenario_20Policy.tar.gz')"
+   ]
   },
   {
    "cell_type": "code",
