--- a/final assignment/FirstTry.ipynb
+++ b/final assignment/FirstTry.ipynb
@@ -15,7 +15,10 @@
     "\n",
     "    low end terms, easy to run models. \n",
     "\n",
-    "    Perspective of any actor or scenario. ==> actor Overijssel.  "
+    "    Perspective of any actor or scenario. ==> actor Overijssel. \n",
+    "\n",
+    "\n",
+    "    10.000 to 50.000 runs for sobol 160.000  "
    ]
   }
  ],
