--- a/final assignment/ExploringModel.ipynb
+++ b/final assignment/ExploringModel.ipynb
@@ -9,125 +9,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import networkx as nx\n",
     "from ema_workbench import ema_logging, MultiprocessingEvaluator\n",
-    "from dike_model_function import DikeNetwork\n",
     "from ema_workbench import Model, RealParameter, ScalarOutcome, CategoricalParameter, IntegerParameter, BooleanParameter\n",
+    "from ema_workbench.em_framework.samplers import sample_uncertainties\n",
     "# from ema_workbench.em_framework.evaluators import MC\n",
+    "from dike_model_function import DikeNetwork\n",
+    "from problem_formulation import get_model_for_problem_formulation\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
-    "function = DikeNetwork()\n",
-    "# workbench model:\n",
-    "dike_model = Model('dikesnet', function=function)\n",
-    "\n",
-    "# Uncertainties and Levers:\n",
-    "# Specify uncertainties range:\n",
-    "Real_uncert = {'Bmax': [30, 350], 'pfail': [0, 1]}  # m and [.]\n",
-    "# breach growth rate [m/day]\n",
-    "cat_uncert_loc = {'Brate': (1., 1.5, 10)}\n",
-    "\n",
-    "cat_uncert = {'discount rate {}'.format(n): (1.5, 2.5, 3.5, 4.5)\n",
-    "                for n in function.planning_steps}\n",
-    "\n",
-    "Int_uncert = {'A.0_ID flood wave shape': [0, 132]}\n",
-    "# Range of dike heightening:\n",
-    "dike_lev = {'DikeIncrease': [0, 10]}    # dm\n",
-    "\n",
-    "# Series of five Room for the River projects:\n",
-    "rfr_lev = ['{}_RfR'.format(project_id) for project_id in range(0, 5)]\n",
-    "\n",
-    "# Time of warning: 0, 1, 2, 3, 4 days ahead from the flood\n",
-    "EWS_lev = {'EWS_DaysToThreat': [0, 4]}  # days\n",
-    "\n",
-    "uncertainties = []\n",
-    "levers = []\n",
-    "\n",
-    "for uncert_name in cat_uncert.keys():\n",
-    "    categories = cat_uncert[uncert_name]\n",
-    "    uncertainties.append(CategoricalParameter(uncert_name, categories))\n",
-    "\n",
-    "for uncert_name in Int_uncert.keys():\n",
-    "    uncertainties.append(IntegerParameter(uncert_name, \n",
-    "                                            Int_uncert[uncert_name][0],\n",
-    "                                            Int_uncert[uncert_name][1]))    \n",
-    "\n",
-    "# RfR levers can be either 0 (not implemented) or 1 (implemented)\n",
-    "for lev_name in rfr_lev:\n",
-    "    for n in function.planning_steps:\n",
-    "        lev_name_ = '{} {}'.format(lev_name, n)\n",
-    "        levers.append(IntegerParameter(lev_name_, 0, 1))\n",
-    "\n",
-    "# Early Warning System lever\n",
-    "for lev_name in EWS_lev.keys():\n",
-    "    levers.append(IntegerParameter(lev_name, EWS_lev[lev_name][0],\n",
-    "                                    EWS_lev[lev_name][1]))\n",
-    "\n",
-    "for dike in function.dikelist:\n",
-    "    # uncertainties in the form: locationName_uncertaintyName\n",
-    "    for uncert_name in Real_uncert.keys():\n",
-    "        name = \"{}_{}\".format(dike, uncert_name)\n",
-    "        lower, upper = Real_uncert[uncert_name]\n",
-    "        uncertainties.append(RealParameter(name, lower, upper))\n",
-    "\n",
-    "    for uncert_name in cat_uncert_loc.keys():\n",
-    "        name = \"{}_{}\".format(dike, uncert_name)\n",
-    "        categories = cat_uncert_loc[uncert_name]\n",
-    "        uncertainties.append(CategoricalParameter(name, categories))\n",
-    "\n",
-    "    # location-related levers in the form: locationName_leversName\n",
-    "    for lev_name in dike_lev.keys():\n",
-    "        for n in function.planning_steps:\n",
-    "            name = \"{}_{} {}\".format(dike, lev_name, n)\n",
-    "            levers.append(IntegerParameter(name, dike_lev[lev_name][0],\n",
-    "                                        dike_lev[lev_name][1]))\n",
-    "\n",
-    "# load uncertainties and levers in dike_model:\n",
-    "dike_model.uncertainties = uncertainties\n",
-    "dike_model.levers = levers\n",
-    "\n",
-    "variable_names = []\n",
-    "variable_names_ = []\n",
-    "\n",
-    "for n in function.planning_steps:\n",
-    "    \n",
-    "    variable_names.extend(\n",
-    "        ['{}_{} {}'.format(dike, e, n) for e in [\n",
-    "            'Expected Annual Damage', 'Dike Investment Costs'] for dike in function.dikelist])\n",
-    "\n",
-    "    variable_names_.extend(\n",
-    "        ['{}_{} {}'.format(dike, e, n) for e in [\n",
-    "            'Expected Number of Deaths'] for dike in function.dikelist])\n",
-    "\n",
-    "    variable_names.extend(['RfR Total Costs {}'.format(n)])\n",
-    "    variable_names.extend(['Expected Evacuation Costs {}'.format(n)])\n",
-    "\n",
-    "dike_model.outcomes = [ScalarOutcome('A.1_Expected Annual Damage 0'),\n",
-    "                            ScalarOutcome('A.1_Expected Number of Deaths 0')]"
+    "dike_model, planning_steps = get_model_for_problem_formulation(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
-     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] performing 10 scenarios * 4 policies * 1 model(s) = 40 experiments\n[MainProcess/INFO] 4 cases completed\n[MainProcess/INFO] 8 cases completed\n[MainProcess/INFO] 12 cases completed\n[MainProcess/INFO] 16 cases completed\n[MainProcess/INFO] 20 cases completed\n[MainProcess/INFO] 24 cases completed\n[MainProcess/INFO] 28 cases completed\n[MainProcess/INFO] 32 cases completed\n[MainProcess/INFO] 36 cases completed\n[MainProcess/INFO] 40 cases completed\n[MainProcess/INFO] experiments finished\n[MainProcess/INFO] terminating pool\n"
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] performing 10000 scenarios * 10 policies * 1 model(s) = 100000 experiments\n",
+      "[MainProcess/INFO] 1000 cases completed\n",
+      "[MainProcess/INFO] 2000 cases completed\n",
+      "[MainProcess/INFO] 3000 cases completed\n",
+      "[MainProcess/INFO] 4000 cases completed\n",
+      "[MainProcess/INFO] 5000 cases completed\n",
+      "[MainProcess/INFO] 6000 cases completed\n",
+      "[MainProcess/INFO] 7000 cases completed\n",
+      "[MainProcess/INFO] 8000 cases completed\n",
+      "[MainProcess/INFO] 9000 cases completed\n",
+      "[MainProcess/INFO] 10000 cases completed\n",
+      "[MainProcess/INFO] 11000 cases completed\n",
+      "[MainProcess/INFO] 12000 cases completed\n",
+      "[MainProcess/INFO] 13000 cases completed\n",
+      "[MainProcess/INFO] 14000 cases completed\n",
+      "[MainProcess/INFO] 15000 cases completed\n",
+      "[MainProcess/INFO] 16000 cases completed\n",
+      "[MainProcess/INFO] 17000 cases completed\n",
+      "[MainProcess/INFO] 18000 cases completed\n",
+      "[MainProcess/INFO] 19000 cases completed\n",
+      "[MainProcess/INFO] 20000 cases completed\n",
+      "[MainProcess/INFO] 21000 cases completed\n",
+      "[MainProcess/INFO] 22000 cases completed\n",
+      "[MainProcess/INFO] 23000 cases completed\n",
+      "[MainProcess/INFO] 24000 cases completed\n",
+      "[MainProcess/INFO] 25000 cases completed\n",
+      "[MainProcess/INFO] 26000 cases completed\n",
+      "[MainProcess/INFO] 27000 cases completed\n",
+      "[MainProcess/INFO] 28000 cases completed\n",
+      "[MainProcess/INFO] 29000 cases completed\n",
+      "[MainProcess/INFO] 30000 cases completed\n",
+      "[MainProcess/INFO] 31000 cases completed\n",
+      "[MainProcess/INFO] 32000 cases completed\n",
+      "[MainProcess/INFO] 33000 cases completed\n",
+      "[MainProcess/INFO] 34000 cases completed\n",
+      "[MainProcess/INFO] 35000 cases completed\n",
+      "[MainProcess/INFO] 36000 cases completed\n",
+      "[MainProcess/INFO] 37000 cases completed\n",
+      "[MainProcess/INFO] 38000 cases completed\n",
+      "[MainProcess/INFO] 39000 cases completed\n",
+      "[MainProcess/INFO] 40000 cases completed\n",
+      "[MainProcess/INFO] 41000 cases completed\n",
+      "[MainProcess/INFO] 42000 cases completed\n",
+      "[MainProcess/INFO] 43000 cases completed\n",
+      "[MainProcess/INFO] 44000 cases completed\n",
+      "[MainProcess/INFO] 45000 cases completed\n",
+      "[MainProcess/INFO] 46000 cases completed\n",
+      "[MainProcess/INFO] 47000 cases completed\n",
+      "[MainProcess/INFO] 48000 cases completed\n",
+      "[MainProcess/INFO] 49000 cases completed\n",
+      "[MainProcess/INFO] 50000 cases completed\n",
+      "[MainProcess/INFO] 51000 cases completed\n",
+      "[MainProcess/INFO] 52000 cases completed\n",
+      "[MainProcess/INFO] 53000 cases completed\n",
+      "[MainProcess/INFO] 54000 cases completed\n",
+      "[MainProcess/INFO] 55000 cases completed\n",
+      "[MainProcess/INFO] 56000 cases completed\n",
+      "[MainProcess/INFO] 57000 cases completed\n",
+      "[MainProcess/INFO] 58000 cases completed\n",
+      "[MainProcess/INFO] 59000 cases completed\n",
+      "[MainProcess/INFO] 60000 cases completed\n",
+      "[MainProcess/INFO] 61000 cases completed\n",
+      "[MainProcess/INFO] 62000 cases completed\n",
+      "[MainProcess/INFO] 63000 cases completed\n",
+      "[MainProcess/INFO] 64000 cases completed\n",
+      "[MainProcess/INFO] 65000 cases completed\n",
+      "[MainProcess/INFO] 66000 cases completed\n",
+      "[MainProcess/INFO] 67000 cases completed\n",
+      "[MainProcess/INFO] 68000 cases completed\n"
+     ]
     }
    ],
    "source": [
-    "from ema_workbench import ema_logging, MultiprocessingEvaluator\n",
-    "\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results = evaluator.perform_experiments(scenarios=10,               #500\n",
-    "                                            policies=4,\n",
-    "                                            uncertainty_sampling='mc')"
+    "    results = evaluator.perform_experiments(scenarios=10000,               #500\n",
+    "                                            policies=10,\n",
+    "                                            uncertainty_sampling='mc', reporting_interval=1000)\n",
+    "\n",
+    "from ema_workbench import save_results\n",
+    "\n",
+    "save_results(results, './mc50pol10000scen.tar.gz')\n"
    ]
   },
   {
@@ -145,7 +140,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments, outcomes = results"
+    "sns.set(style=\"ticks\", color_codes=True)\n",
+    "experiments, outcomes = results\n",
+    "\n",
+    "data = pd.Dataframe(outcomes)\n",
+    "\n",
+    "sns.pairplot(data, vars=list(outcomes.keys()), diag_kind='hist')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt # TO DO; plot the scalers.\n",
+    "\n",
+    "plt.figure(figsize=(10,10), dpi=80)\n",
+    "plt.figure(1)\n",
+    "ax1 = plt.subplot(221)\n",
+    "data['max_P'].hist(color=\"r\")\n",
+    "ax2 = plt.subplot(222)\n",
+    "data['utility'].hist(color=\"y\")\n",
+    "ax3 = plt.subplot(223)\n",
+    "data['inertia'].hist(color=\"g\")\n",
+    "ax4 = plt.subplot(224)\n",
+    "data['reliability'].hist(color=\"b\")"
    ]
   },
   {
@@ -185,9 +206,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python38",
    "language": "python",
-   "name": "python3"
+   "name": "python38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -199,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
