--- a/final assignment/Optimization.ipynb
+++ b/final assignment/Optimization.ipynb
@@ -6,9 +6,21 @@
    "source": [
     "# Model optimization, direct search and robustness. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "python38",
+   "language": "python",
+   "name": "python38"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -19,10 +31,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
+   "version": "3.8.3"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
