dropped the running code as it fucked up on jupyter

--- a/final assignment/ExploringModel.ipynb
+++ b/final assignment/ExploringModel.ipynb
@@ -25,9 +25,7 @@
     "# from ema_workbench.em_framework.evaluators import MC\n",
     "from dike_model_function import DikeNetwork\n",
     "from problem_formulation import get_model_for_problem_formulation\n",
-    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
-    "\n",
-    "dike_model, planning_steps = get_model_for_problem_formulation(5)"
+    "ema_logging.log_to_stderr(ema_logging.INFO)"
    ]
   },
   {
@@ -112,18 +110,7 @@
      ]
     }
    ],
-   "source": [
-    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
-    "\n",
-    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results = evaluator.perform_experiments(scenarios=10000,               #500\n",
-    "                                            policies=10,\n",
-    "                                            uncertainty_sampling='mc', reporting_interval=1000)\n",
-    "\n",
-    "from ema_workbench import save_results\n",
-    "\n",
-    "save_results(results, './mc50pol10000scen.tar.gz')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
