Gelderland experiments are done

--- a/final assignment/TODO.ipynb
+++ b/final assignment/TODO.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "<Logger EMA (DEBUG)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,89 +61,9 @@
     "from problem_formulation import get_model_for_problem_formulation\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
     "\n",
-    "dike_model, planning_steps = get_model_for_problem_formulation(2)\n",
+    "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
     "\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'0_RfR 0'\n",
-      "IntegerParameter('0_RfR 0', 0, 1)\n",
-      "'0_RfR 1'\n",
-      "IntegerParameter('0_RfR 1', 0, 1)\n",
-      "'0_RfR 2'\n",
-      "IntegerParameter('0_RfR 2', 0, 1)\n",
-      "'1_RfR 0'\n",
-      "IntegerParameter('1_RfR 0', 0, 1)\n",
-      "'1_RfR 1'\n",
-      "IntegerParameter('1_RfR 1', 0, 1)\n",
-      "'1_RfR 2'\n",
-      "IntegerParameter('1_RfR 2', 0, 1)\n",
-      "'2_RfR 0'\n",
-      "IntegerParameter('2_RfR 0', 0, 1)\n",
-      "'2_RfR 1'\n",
-      "IntegerParameter('2_RfR 1', 0, 1)\n",
-      "'2_RfR 2'\n",
-      "IntegerParameter('2_RfR 2', 0, 1)\n",
-      "'3_RfR 0'\n",
-      "IntegerParameter('3_RfR 0', 0, 1)\n",
-      "'3_RfR 1'\n",
-      "IntegerParameter('3_RfR 1', 0, 1)\n",
-      "'3_RfR 2'\n",
-      "IntegerParameter('3_RfR 2', 0, 1)\n",
-      "'4_RfR 0'\n",
-      "IntegerParameter('4_RfR 0', 0, 1)\n",
-      "'4_RfR 1'\n",
-      "IntegerParameter('4_RfR 1', 0, 1)\n",
-      "'4_RfR 2'\n",
-      "IntegerParameter('4_RfR 2', 0, 1)\n",
-      "'EWS_DaysToThreat'\n",
-      "IntegerParameter('EWS_DaysToThreat', 0, 4)\n",
-      "'A.1_DikeIncrease 0'\n",
-      "IntegerParameter('A.1_DikeIncrease 0', 0, 10)\n",
-      "'A.1_DikeIncrease 1'\n",
-      "IntegerParameter('A.1_DikeIncrease 1', 0, 10)\n",
-      "'A.1_DikeIncrease 2'\n",
-      "IntegerParameter('A.1_DikeIncrease 2', 0, 10)\n",
-      "'A.2_DikeIncrease 0'\n",
-      "IntegerParameter('A.2_DikeIncrease 0', 0, 10)\n",
-      "'A.2_DikeIncrease 1'\n",
-      "IntegerParameter('A.2_DikeIncrease 1', 0, 10)\n",
-      "'A.2_DikeIncrease 2'\n",
-      "IntegerParameter('A.2_DikeIncrease 2', 0, 10)\n",
-      "'A.3_DikeIncrease 0'\n",
-      "IntegerParameter('A.3_DikeIncrease 0', 0, 10)\n",
-      "'A.3_DikeIncrease 1'\n",
-      "IntegerParameter('A.3_DikeIncrease 1', 0, 10)\n",
-      "'A.3_DikeIncrease 2'\n",
-      "IntegerParameter('A.3_DikeIncrease 2', 0, 10)\n",
-      "'A.4_DikeIncrease 0'\n",
-      "IntegerParameter('A.4_DikeIncrease 0', 0, 10)\n",
-      "'A.4_DikeIncrease 1'\n",
-      "IntegerParameter('A.4_DikeIncrease 1', 0, 10)\n",
-      "'A.4_DikeIncrease 2'\n",
-      "IntegerParameter('A.4_DikeIncrease 2', 0, 10)\n",
-      "'A.5_DikeIncrease 0'\n",
-      "IntegerParameter('A.5_DikeIncrease 0', 0, 10)\n",
-      "'A.5_DikeIncrease 1'\n",
-      "IntegerParameter('A.5_DikeIncrease 1', 0, 10)\n",
-      "'A.5_DikeIncrease 2'\n",
-      "IntegerParameter('A.5_DikeIncrease 2', 0, 10)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for policy in dike_model.levers:\n",
-    "    print(repr(policy.name))\n",
-    "    print(repr(policy))"
    ]
   },
   {
@@ -436,6 +356,105 @@
     "\n",
     "sns.pairplot(data,vars=list(outcomes.keys()), diag_kind='hist')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gelderland"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ema_workbench import Policy\n",
+    "\n",
+    "policy_dict_gel = {'0_RfR 0':0, \n",
+    "               '0_RfR 1':0,\n",
+    "               '0_RfR 2':0,\n",
+    "               '1_RfR 0':0,\n",
+    "               '1_RfR 1':0,\n",
+    "               '1_RfR 2':0,\n",
+    "               '2_RfR 0':0,\n",
+    "               '2_RfR 1':0,\n",
+    "               '2_RfR 2':0,\n",
+    "               '3_RfR 0':0,\n",
+    "               '3_RfR 1':0,\n",
+    "               '3_RfR 2':0,\n",
+    "               '4_RfR 0':0,\n",
+    "               '4_RfR 1':0,\n",
+    "               '4_RfR 2':0,\n",
+    "               'EWS_DaysToThreat':0,\n",
+    "               'A.1_DikeIncrease 0':7,\n",
+    "               'A.1_DikeIncrease 1':0,\n",
+    "               'A.1_DikeIncrease 2':0,\n",
+    "               'A.2_DikeIncrease 0':7,\n",
+    "               'A.2_DikeIncrease 1':0,\n",
+    "               'A.2_DikeIncrease 2':0,\n",
+    "               'A.3_DikeIncrease 0':4,\n",
+    "               'A.3_DikeIncrease 1':0,\n",
+    "               'A.3_DikeIncrease 2':0,\n",
+    "               'A.4_DikeIncrease 0':4,\n",
+    "               'A.4_DikeIncrease 1':0,\n",
+    "               'A.4_DikeIncrease 2':0,\n",
+    "               'A.5_DikeIncrease 0':3,\n",
+    "               'A.5_DikeIncrease 1':0,\n",
+    "               'A.5_DikeIncrease 2':0}\n",
+    "\n",
+    "pols_gel = Policy('Preferred_policy_Gel', **policy_dict_gel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] pool started\n",
+      "[MainProcess/INFO] performing 1000 scenarios * 1 policies * 1 model(s) = 1000 experiments\n",
+      "[MainProcess/INFO] 100 cases completed\n",
+      "[MainProcess/INFO] 200 cases completed\n",
+      "[MainProcess/INFO] 300 cases completed\n",
+      "[MainProcess/INFO] 400 cases completed\n",
+      "[MainProcess/INFO] 500 cases completed\n",
+      "[MainProcess/INFO] 600 cases completed\n",
+      "[MainProcess/INFO] 700 cases completed\n",
+      "[MainProcess/INFO] 800 cases completed\n",
+      "[MainProcess/INFO] 900 cases completed\n",
+      "[MainProcess/INFO] 1000 cases completed\n",
+      "[MainProcess/INFO] experiments finished\n",
+      "[MainProcess/INFO] terminating pool\n"
+     ]
+    }
+   ],
+   "source": [
+    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "    results = evaluator.perform_experiments(scenarios = 1000,               #500\n",
+    "                                            policies=pols_gel, reporting_interval=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[MainProcess/INFO] results saved successfully to C:\\Users\\teres\\Documents\\EPA1361-Model-based Decison Making\\EPA1361\\final assignment\\Gelderland.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_results(results, './Gelderland.tar.gz')"
    ]
   },
   {
